# mooc-cha-api

./: Dockerfile  conftest.py  pyproject.toml  pytest.ini
rating/services/: lecture_service.py
rating/tests/services/: test_lecture_service.py
